import "SDMS.proto";

package SDMS.Facility;

enum Protocol
{
    ID = 2;
}

enum ResponseCode
{
    ID_OK                       = 0;
    ID_SECURITY_REQUIRED        = 1; // Method requires security context
    ID_SECURITY_NOT_ALLOWED     = 2;
    ID_SECURITY_ERROR           = 3;
    ID_ENCRYPTION_REQUIRED      = 4; // Method requires encryption (over security context)
}

// ============================ Data Structures

message UserData
{
    required string             uid         = 1;
    required string             name_last   = 2;
    required string             name_first  = 3;
    optional string             email       = 4;
    optional string             phone       = 5;
    optional string             globus_id   = 6;
}

// ============================ Requests and Replies

// Reply with same for token exchange, end handshake with SDMS.AckReply
message InitSecurityRequest
{
    required bytes              token       = 1;
}

// Reply with SDMS.AckReply
message TermSecurityRequest
{
}

message UserListRequest
{
    optional bool               details     = 1;
    optional uint32             offset      = 2;
    optional uint32             count       = 3;
}

message UserListReply
{
    optional SDMS.ReplyHeader   header      = 1;
    repeated UserData           user        = 2;
}

